--- a/devci/ansible.cfg
+++ b/devci/ansible.cfg
@@ -3,6 +3,6 @@ enable_plugins = aws_ec2
 host_key_checking = False
 pipelining = True
 remote_user = ec2-user
-private_key_file=/home/ec2-user/.ssh/dev-aws-cert.pem
+#private_key_file=/home/ec2-user/.ssh/dev-aws-cert.pem
 
 
