--- a/devci-agents/playbook.yaml
+++ b/devci-agents/playbook.yaml
@@ -5,11 +5,13 @@
   tasks:
     - name: "Upgrade devci Agents"
       become: yes
+      shell: "sudo -y yum install jitterbit-agent-{{ Build_VER }}.x86_64"
+      register: datecmd
+      tags: datecmd
+    - name: "restart agents"
+      become: yes
       shell: |
-          "sudo -y yum install jitterbit-agent-{{ Build_VER }}.x86_64"
           pkill -9 -u jitterbit
           jitterbit stop
           jitterbit start
-      register: datecmd
-      tags: datecmd
     - debug: msg="{{datecmd.stdout}}"
